--- a/public/booking.html
+++ b/public/booking.html
@@ -1,295 +1,199 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Class Booking</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="bg-neutral-800 min-h-screen">
-    <div class="container mx-auto px-4 py-8 max-w-2xl">
-      <h1 class="text-3xl font-bold text-white mb-6">Class Booking</h1>
+<script>
+/* ----------------- Helpers ----------------- */
+function qp(key) {
+  return new URLSearchParams(location.search).get(key) || "";
+}
+function toISODate(d) {
+  const tz = d.getTimezoneOffset() * 60000;
+  return new Date(d.getTime() - tz).toISOString().slice(0, 10);
+}
+function parseISODate(s) {
+  const [y, m, d] = s.split("-").map(Number);
+  return new Date(y, m - 1, d);
+}
+function weekdayKeyFromDateStr(iso) {
+  return ["Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat"][
+    parseISODate(iso).getDay()
+  ];
+}
 
-      <form method="POST" action="/book" class="bg-white p-6 rounded-lg shadow-md space-y-4">
-        <div>
-          <label for="trainer" class="block text-gray-700 font-semibold mb-2">Trainer</label>
-          <select
-            id="trainer"
-            name="trainer"
-            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
-            required
-          >
-            <option value="Daniel Smith" data-id="1">Daniel Smith</option>
-            <option value="Emma Wilson" data-id="2">Emma Wilson</option>
-            <option value="John Carter" data-id="3">John Carter</option>
-            <option value="Michael Brown" data-id="4">Michael Brown</option>
-            <option value="Sophia Miller" data-id="5">Sophia Miller</option>
-          </select>
+/* ----------------- DAY NORMALIZER ----------------- */
+function normalizeDayToAbbrev(token) {
+  if (!token) return "";
+  const t = token.toString().trim().toLowerCase();
+  const map = {
+    sun: "Sun", sunday: "Sun",
+    mon: "Mon", monday: "Mon",
+    tue: "Tue", tues: "Tue", tuesday: "Tue",
+    wed: "Wed", weds: "Wed", wednesday: "Wed",
+    thu: "Thu", thur: "Thu", thurs: "Thu", thursday: "Thu",
+    fri: "Fri", friday: "Fri",
+    sat: "Sat", saturday: "Sat",
+  };
+  return map[t] || map[t.slice(0, 3)] || "";
+}
 
-          <label for="class" class="block text-gray-700 font-semibold mb-2 mt-4">Class</label>
-          <input id="class" name="class" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" readonly />
-        </div>
+/* ----------------- FETCH TRAINERS ONLY /api/trainers ----------------- */
+async function fetchTrainers() {
+  const r = await fetch("/api/trainers", {
+    headers: { Accept: "application/json" },
+  });
 
-        <div>
-          <label for="price" class="block text-gray-700 font-semibold mb-2">Price (THB)</label>
-          <input id="price" name="price" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" readonly />
-        </div>
+  if (!r.ok) throw new Error(`/api/trainers → ${r.status}`);
+  return r.json();
+}
 
-        <div>
-          <label for="date" class="block text-gray-700 font-semibold mb-2">Date</label>
-          <input id="date" name="date" type="date" required class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
-          <p class="text-xs text-gray-500 mt-1">Only dates that match the trainer’s weekly schedule will show time slots.</p>
-        </div>
+/* ----------------- BUILD WEEK SCHEDULE ----------------- */
+function buildWeekSchedule(trainer) {
+  const sched = {};
+  if (!trainer) return sched;
 
-        <div>
-          <label for="timeSlot" class="block text-gray-700 font-semibold mb-2">Time</label>
-          <select id="timeSlot" name="timeSlot" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" required>
-            <option value="">Loading…</option>
-          </select>
-          <div id="scheduleNote" class="text-sm text-gray-500 mt-2"></div>
-          <div id="diag" class="text-xs text-gray-400 mt-1 whitespace-pre-wrap"></div>
-        </div>
+  let raw = trainer.schedule;
+  let arr = [];
 
-        <input type="hidden" name="trainerId" id="trainerId" />
-        <input type="hidden" name="classId" id="classId" />
+  if (Array.isArray(raw)) arr = raw;
+  else if (typeof raw === "string") {
+    try {
+      arr = JSON.parse(raw);
+    } catch {
+      console.warn("Invalid schedule JSON string", raw);
+      arr = [];
+    }
+  }
 
-        <button id="bookBtn" class="w-full bg-blue-500 text-white py-2 px-4 rounded-md hover:bg-blue-600 disabled:opacity-50 disabled:cursor-not-allowed" style="margin-top: 12px">
-          Book Now
-        </button>
-      </form>
+  arr.forEach((slotRaw) => {
+    if (typeof slotRaw !== "string") return;
 
-      <p class="mt-4">
-        <a href="/trainers.html" class="text-blue-500 hover:underline">← Back to class</a>
-      </p>
-    </div>
+    let s = slotRaw.replace(/\u2013/g, "-").replace(/\s+/g, " ").trim();
 
-    <script>
-      /* ------------ tiny helpers ------------ */
-      const $ = (id) => document.getElementById(id);
-      const log = (msg) => { const d=$("diag"); d.textContent += (d.textContent? "\n":"") + msg; };
+    const m = s.match(/^([A-Za-z]+)\s+([0-2]\d:[0-5]\d)\s*-\s*([0-2]\d:[0-5]\d)$/);
+    if (!m) return;
 
-      function qp(key){ return new URLSearchParams(location.search).get(key)||""; }
-      function toISODateLocal(d){ const tz=d.getTimezoneOffset()*60000; return new Date(d.getTime()-tz).toISOString().slice(0,10); }
-      function parseISODate(s){ const [y,m,d]=s.split("-").map(Number); return new Date(y,m-1,d); }
-      function weekdayKeyFromDateStr(iso){ return ["Sun","Mon","Tue","Wed","Thu","Fri","Sat"][parseISODate(iso).getDay()]; }
+    const dayAbbrev = normalizeDayToAbbrev(m[1]);
+    if (!dayAbbrev) return;
 
-      function setLoading(isLoading,msg){
-        const timeSel=$("timeSlot");
-        const note=$("scheduleNote");
-        const btn=$("bookBtn");
-        if(isLoading){
-          btn.disabled=true;
-          timeSel.disabled=true;
-          timeSel.innerHTML='<option value="">Loading…</option>';
-          note.textContent = msg || "Loading schedule…";
-        }else{
-          timeSel.disabled=false;
-          if(!timeSel.options.length) timeSel.innerHTML='<option value="">Choose a time</option>';
-          if(note.textContent.startsWith("Loading")) note.textContent = "";
-          btn.disabled=false;
-        }
-      }
-      function showError(message){
-        const note=$("scheduleNote");
-        note.textContent=message;
-        note.classList.remove("text-gray-500");
-        note.classList.add("text-red-600");
-        $("bookBtn").disabled=true;
-      }
-      window.addEventListener("error", e => showError("Script error: "+(e.message||"unknown")));
-      window.addEventListener("unhandledrejection", e => showError("Promise error: "+(e.reason?.message||e.reason||"unknown")));
+    const timeStr = `${m[2]}-${m[3]}`;
+    if (!sched[dayAbbrev]) sched[dayAbbrev] = [];
+    sched[dayAbbrev].push(timeStr);
+  });
 
-      /* ------------ schedule parsing ------------ */
-      function normalizeDayToAbbrev(token){
-        if(!token) return "";
-        const t=token.toString().trim().toLowerCase();
-        const map={sun:"Sun",sunday:"Sun",mon:"Mon",monday:"Mon",tue:"Tue",tues:"Tue",tuesday:"Tue",wed:"Wed",weds:"Wed",wednesday:"Wed",thu:"Thu",thur:"Thu",thurs:"Thu",thursday:"Thu",fri:"Fri",friday:"Fri",sat:"Sat",saturday:"Sat"};
-        return map[t]||map[t.slice(0,3)]||"";
-      }
-      function coerceScheduleToArray(raw){
-        if(Array.isArray(raw)) return raw;
-        if(typeof raw==="string"){
-          try{ return JSON.parse(raw); }catch{ return raw.split(",").map(s=>s.trim()).filter(Boolean); }
-        }
-        if(raw && typeof raw==="object"){
-          const out=[];
-          for(const k of Object.keys(raw)){
-            const d=normalizeDayToAbbrev(k); const v=raw[k];
-            if(Array.isArray(v)) v.forEach(t=>typeof t==="string" && out.push(`${d} ${t}`));
-            else if(typeof v==="string") out.push(`${d} ${v}`);
-          }
-          return out;
-        }
-        return [];
-      }
-      function buildWeekScheduleLoose(trainer){
-        const sched={}; if(!trainer) return sched;
-        const arr=coerceScheduleToArray(trainer.schedule);
-        arr.forEach(slot=>{
-          if(typeof slot!=="string") return;
-          const s=slot.replace(/[\u2010\u2011\u2012\u2013\u2014\u2212]/g,"-").replace(/\s+/g," ").trim();
-          const i=s.indexOf(" "); if(i<0) return;
-          const day=normalizeDayToAbbrev(s.slice(0,i));
-          const time=s.slice(i+1);
-          if(!day||!time) return;
-          if(!sched[day]) sched[day]=[];
-          sched[day].push(time);
-        });
-        return sched;
-      }
+  return sched;
+}
 
-      /* ------------ fill UI ------------ */
-      function getAvailableDates(sched,maxDays=90){
-        const dates=[]; let d=new Date();
-        for(let i=0;i<maxDays;i++){
-          const iso=toISODateLocal(d);
-          const wk=weekdayKeyFromDateStr(iso);
-          if(sched[wk] && sched[wk].length) dates.push(iso);
-          d.setDate(d.getDate()+1);
-        }
-        return dates;
-      }
-      function fillDateOptions(sched){
-        const dateInput=$("date");
-        const today=new Date(), max=new Date(); max.setDate(today.getDate()+90);
-        dateInput.min=toISODateLocal(today);
-        dateInput.max=toISODateLocal(max);
-        const availableDates=getAvailableDates(sched);
-        if(availableDates[0]) dateInput.value=availableDates[0];
-        return availableDates;
-      }
-      function fillTimeOptionsForDate(sched,isoDate){
-        const timeSel=$("timeSlot");
-        const note=$("scheduleNote");
-        const btn=$("bookBtn");
-        timeSel.innerHTML='<option value="">Choose a time</option>';
-        if(!isoDate){ note.textContent="Please pick a date."; btn.disabled=true; return; }
-        const wk=weekdayKeyFromDateStr(isoDate);
-        const slots=sched[wk]||[];
-        if(slots.length){
-          slots.forEach(t=>{ const opt=document.createElement("option"); opt.value=t; opt.textContent=t; timeSel.appendChild(opt); });
-          note.textContent=`Available on ${wk}: ${slots.join(", ")}`;
-          btn.disabled=false;
-        }else{
-          note.textContent="No classes on this day.";
-          btn.disabled=true;
-        }
-      }
+/* ----------------- SCHEDULE TO UI ----------------- */
+function refreshTimeOptionsForDate(sched, isoDate) {
+  const timeSel = document.getElementById("timeSlot");
+  const note = document.getElementById("scheduleNote");
+  const btn = document.getElementById("bookBtn");
 
-      /* ------------ robust fetch with timeout & reporting ------------ */
-      function fetchWithTimeout(url, ms){
-        log(`→ Fetch ${url} (timeout ${ms}ms)`);
-        const controller=new AbortController();
-        const id=setTimeout(()=>controller.abort(), ms);
-        return fetch(url,{signal:controller.signal})
-          .then(r=>{
-            clearTimeout(id);
-            log(`✓ ${url} → status ${r.status}`);
-            if(!r.ok) throw new Error(`${url} → HTTP ${r.status}`);
-            return r.json().then(j=>({ok:true, data:j})).catch(e=>{ throw new Error(`${url} → JSON parse failed`); });
-          })
-          .catch(err=>{
-            log(`✗ ${url} failed: ${err.message||err}`);
-            return {ok:false, error: err};
-          });
-      }
+  timeSel.innerHTML = '<option value="">Choose a time</option>';
 
-      async function loadTrainersAny(){
-        // เรียก 2 route พร้อมกัน แล้วใช้ตัวที่สำเร็จก่อน
-        const TIMEOUT = 7000; // 7s/route
-        const p1 = fetchWithTimeout("/api/trainers", TIMEOUT);
-        const p2 = fetchWithTimeout("/trainers", TIMEOUT);
+  if (!isoDate) {
+    note.textContent = "Please pick a date.";
+    btn.disabled = true;
+    return;
+  }
 
-        const [r1, r2] = await Promise.allSettled([p1, p2]);
-        const a = r1.status==="fulfilled" ? r1.value : {ok:false, error:r1.reason};
-        const b = r2.status==="fulfilled" ? r2.value : {ok:false, error:r2.reason};
+  const wk = weekdayKeyFromDateStr(isoDate);
+  const slots = sched[wk] || [];
 
-        if (a.ok) return a.data;
-        if (b.ok) return b.data;
+  if (slots.length) {
+    slots.forEach((t) => {
+      const opt = document.createElement("option");
+      opt.value = t;
+      opt.textContent = t;
+      timeSel.appendChild(opt);
+    });
+    note.textContent = `Available on ${wk}: ${slots.join(", ")}`;
+    btn.disabled = false;
+  } else {
+    note.textContent = `No classes on this day.`;
+    btn.disabled = true;
+  }
+}
 
-        // ทั้งคู่ล้มเหลว
-        throw new Error("Both routes failed.");
-      }
+function getFirstAvailableDate(sched, maxDays = 90) {
+  const today = new Date();
+  for (let i = 0; i < maxDays; i++) {
+    const d = new Date(today);
+    d.setDate(today.getDate() + i);
+    const iso = toISODate(d);
+    const wk = weekdayKeyFromDateStr(iso);
+    if (sched[wk] && sched[wk].length) return iso;
+  }
+  return "";
+}
 
-      /* ------------ main ------------ */
-      async function init(){
-        setLoading(true, "Loading schedule…");
+/* ----------------- MAIN INIT ----------------- */
+async function loadScheduleAndRefresh(trainerName, preferredISO, preferredTime) {
+  let sched = {};
 
-        // Prefill fields
-        const trainerSelect=$("trainer");
-        let trainerName=qp("trainer") || trainerSelect.value;
-        $("class").value = qp("class") || "";
-        $("price").value = qp("price") || "";
-        $("classId").value = qp("classId") || "";
-        const opt = Array.from(trainerSelect.options).find(o=>o.value===trainerName) || trainerSelect.selectedOptions[0];
-        trainerSelect.value = opt.value;
-        $("trainerId").value = opt.getAttribute("data-id");
+  try {
+    const trainers = await fetchTrainers();
+    const trainer = trainers.find((t) => t.name === trainerName);
+    sched = buildWeekSchedule(trainer);
+  } catch (e) {
+    console.error(e);
+    sched = {};
+  }
 
-        // Fetch trainers with strong reporting
-        let trainers;
-        try{
-          if (location.protocol === "file:") {
-            log("⚠ You are opening this file via file:// — fetch to /api/trainers will not work. Serve via http(s).");
-          }
-          log(`navigator.onLine = ${navigator.onLine}`);
-          trainers = await loadTrainersAny();
-          log(`Received trainers JSON (length=${Array.isArray(trainers)? trainers.length : "?"})`);
-        }catch(err){
-          showError("Cannot load trainers (both /api/trainers and /trainers failed).");
-          log("Fatal: "+(err.message||err));
-          setLoading(false);
-          return;
-        }
+  let defaultISO = preferredISO;
+  if (defaultISO) {
+    const wk = weekdayKeyFromDateStr(defaultISO);
+    if (!sched[wk] || !sched[wk].length) defaultISO = "";
+  }
+  if (!defaultISO) defaultISO = getFirstAvailableDate(sched, 90);
 
-        const trainer = Array.isArray(trainers) ? trainers.find(t=>t.name===trainerName) : null;
-        if(!trainer){
-          showError("Trainer not found from API.");
-          log("Trainer list sample: "+JSON.stringify(trainers?.[0] || {}, null, 2).slice(0,200)+"…");
-          setLoading(false);
-          return;
-        }
+  const dateInput = document.getElementById("date");
+  dateInput.value = defaultISO || "";
 
-        const sched = buildWeekScheduleLoose(trainer);
-        log("Built schedule keys: "+Object.keys(sched).join(", "));
-        if(!Object.keys(sched).length){
-          showError("No schedule data for this trainer.");
-        }
+  refreshTimeOptionsForDate(sched, dateInput.value);
 
-        const availableDates = fillDateOptions(sched);
-        const dateQ = qp("date");
-        const defaultISO = (dateQ && availableDates.includes(dateQ)) ? dateQ : (availableDates[0] || "");
-        $("date").value = defaultISO;
-        if (defaultISO) fillTimeOptionsForDate(sched, defaultISO);
+  if (preferredTime) {
+    const sel = document.getElementById("timeSlot");
+    const has = Array.from(sel.options).some((o) => o.value === preferredTime);
+    if (has) sel.value = preferredTime;
+  }
 
-        $("date").addEventListener("change", (e)=> fillTimeOptionsForDate(sched, e.target.value));
+  dateInput.onchange = (e) => {
+    refreshTimeOptionsForDate(sched, e.target.value);
+  };
+}
 
-        trainerSelect.addEventListener("change", async (e)=>{
-          setLoading(true, "Reloading schedule…");
-          const sel=e.target.selectedOptions[0];
-          $("trainerId").value = sel.getAttribute("data-id");
-          trainerName = sel.value;
+/* ----------------- INIT DOM ----------------- */
+document.addEventListener("DOMContentLoaded", async () => {
+  const trainerSelect = document.getElementById("trainer");
 
-          try{
-            const trainers2 = await loadTrainersAny();
-            const trainer2 = Array.isArray(trainers2)? trainers2.find(t=>t.name===trainerName) : null;
-            const sched2 = buildWeekScheduleLoose(trainer2);
-            const avail2 = fillDateOptions(sched2);
-            const first = avail2[0] || "";
-            $("date").value = first;
-            fillTimeOptionsForDate(sched2, first);
-            $("timeSlot").value = "";
-          }catch(err){
-            showError("Reload trainer failed.");
-            log("Reload error: "+(err.message||err));
-          }finally{
-            setLoading(false);
-          }
-        });
+  let trainerName = qp("trainer");
+  let className = qp("class");
+  let price = qp("price");
+  let dateQ = qp("date");
+  let timeQ = qp("time");
+  let classId = qp("classId");
 
-        setLoading(false);
-      }
+  if (trainerName) {
+    const opt = Array.from(trainerSelect.options).find(
+      (o) => o.value === trainerName
+    );
+    if (opt) {
+      trainerSelect.value = trainerName;
+      document.getElementById("trainerId").value =
+        opt.getAttribute("data-id") || "";
+    }
+  }
 
-      document.addEventListener("DOMContentLoaded", init);
-    </script>
-  </body>
-</html>
+  document.getElementById("class").value = className || "";
+  document.getElementById("price").value = price || "";
+  document.getElementById("classId").value = classId || "";
+
+  trainerSelect.addEventListener("change", async (e) => {
+    const opt = e.target.selectedOptions[0];
+    document.getElementById("trainerId").value =
+      opt.getAttribute("data-id") || "";
+    await loadScheduleAndRefresh(opt.value, "", "");
+    document.getElementById("timeSlot").value = "";
+  });
+
+  await loadScheduleAndRefresh(trainerName, dateQ, timeQ);
+});
+</script>
