--- a/public/trainers.html
+++ b/public/trainers.html
@@ -76,6 +76,9 @@
           <span class="bg-purple-100 text-purple-800 px-2 py-1 rounded text-sm">Group: ${
             c.group_size
           }</span>
+           <span class="bg-purple-100 text-red-800 px-2 py-1 rounded text-sm">Group: ${
+            c.status
+          }</span>
         </div>
  
         <p class="text-gray-600 mb-4">${c.about}</p>
