--- a/public/trainers.html
+++ b/public/trainers.html
@@ -63,7 +63,7 @@
           : "bg-green-100 text-green-800";
           
           const isFull = status.toLowerCase() === "full";
-          const disabledAttr = isFull ? "disabled" : "";
+          const disabledAttr = isFull ? "disabled aria-disabled='true' title='Class is full'" : "";
           const disabledCss = isFull ? "opacity-50 cursor-not-allowed" : "";
           
           const card = document.createElement("div");
